<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="AirParameters" Id="{8f57986d-0f98-44d6-9bd8-dea4c1cfd8cd}">
    <Declaration><![CDATA[TYPE AirParameters :
STRUCT
	ControlMode: FanControlTypes;
	Control: ControllerParameters;
	Defaults: DefaultParameters;
	KFactor: LREAL := 96.7;
	SlaveOffset: LREAL;
	Test1: LREAL;
	Test2: LREAL;
	Test3: LREAL;
	Test4: LREAL;
	Test5: LREAL;
	Test6: LREAL := 12345;
	ConstOutput: LREAL; // $(unit %)
	MinSpeed: LREAL := 0.0; // $(scale "0 1 0 100", unit "%", step 0.5, min 0, max 100)
	MaxSpeed: LREAL := 1.0; // $(scale "0 1 0 100", unit "%", step 0.5, min 0, max 100)
	StartupFanSpeed: LREAL;
	SetPointAdjustment: SetPointAdjustment;
	Fire: FireParameters;
	FanType: FanTypes := FanTypes.EBM;
	SpecificFanPower: LREAL; // $(unit "kPa")
	Flow: LREAL; // $(unit "l/s")
	Power: LREAL; // $(unit "W")
	Speed: LREAL; // $(unit "rpm")
	FanEfficiency: LREAL; // $(scale "0 1 0 100", unit "%")
	PressureRise: LREAL; // $(unit "Pa")
	AdjustCSP: LREAL := 1.0; // $(skip) Adjust CSP during defrost
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>