<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="TemperatureCompensationSources" Id="{735a51a4-88c4-4b0d-bef4-f203a9af7fe9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE TemperatureCompensationSources :
(
	Auto := 0, BT1, T_BT2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>