<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="RegulationParametersFB" Id="{35458062-23b8-41fa-a7d8-32b0bd66ddbe}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK RegulationParametersFB
VAR_IN_OUT
	Parameters: GreenMasterBaseParameters;
	ParametersFB: GreenMasterBaseParametersFB;
END_VAR
VAR_INPUT
	Control: RegulationControlParameters;
	//SupplyAir: AirParametersFB := (StartupFanSpeed := 0.3, SetPointAdjustment := (Curve := (Y1 := 165, Y2 := 165, Y3 := 165, Y4 := 165, Y5 := 165, Y6 := 165, Y7 := 165, Y8 := 165, Y9 := 165)));
	//ExtractAir: AirParametersFB := (StartupFanSpeed := 0.4, SetPointAdjustment := (Curve := (Y1 := 160, Y2 := 160, Y3 := 160, Y4 := 160, Y5 := 160, Y6 := 160, Y7 := 160, Y8 := 160, Y9 := 160)));
	SupplyAir: AirParametersFB := (StartupFanSpeed := 0.3);
	ExtractAir: AirParametersFB := (StartupFanSpeed := 0.4);
	Temperature: TemperatureControlParametersFB;
	NightCoolingLimit: LREAL := 18;
	NightCooling: BOOL;
	NightCoolingEN: BOOL := FALSE;
	TemperatureCompensationSource: TemperatureCompensationSources;
	CurrentTemperatureCompensationSource: TemperatureCompensationSources;
	CompensationTemperature: LREAL;
	SystemSpecificFanPower: LREAL; // $(unit "kPa")
	SystemEfficiency: LREAL; // $(scale "0 1 0 100", unit "%")
	ApplyAbsoluteSetPointCurves: word; // $(skip)
	LastApplyAbsoluteSetPointCurves: WORD; // $(skip)
END_VAR
VAR_OUTPUT
END_VAR
VAR
	CurrentMaxFlow: LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[SupplyAir(Parameters := Parameters);
ExtractAir(Parameters := Parameters);
Temperature(Parameters := Parameters, EN:=Parameters.System.Operation.EN);

IF __ISVALIDREF(ParametersFB.GetGreenMaster()) THEN
	Temperature.Control.PV := ParametersFB.GetGreenMaster().GetCurrentPV();
	SupplyAir.Control.PV := ParametersFB.GetGreenMaster().GetCurrentSupplyAirPV();
	ExtractAir.Control.PV := ParametersFB.GetGreenMaster().GetCurrentExtractAirPV();
END_IF

CASE TemperatureCompensationSource OF
	TemperatureCompensationSources.Auto:
		CompensationTemperature := Parameters.IO.AIn.BT1;
		IF (NOT Parameters.IO.AIn.BT1_EN) OR Parameters.IO.AIn.BT1_Error THEN
			CompensationTemperature := Parameters.IO.AIn.T_BT2;
			CurrentTemperatureCompensationSource := TemperatureCompensationSources.T_BT2;
		ELSE
			CurrentTemperatureCompensationSource := TemperatureCompensationSources.BT1;			
		END_IF;
	TemperatureCompensationSources.BT1:
		CurrentTemperatureCompensationSource := TemperatureCompensationSources.BT1;
		CompensationTemperature := Parameters.IO.AIn.BT1;
	TemperatureCompensationSources.T_BT2:
		CurrentTemperatureCompensationSource := TemperatureCompensationSources.T_BT2;
		CompensationTemperature := Parameters.IO.AIn.T_BT2;
END_CASE
SupplyAir.Flow := Parameters.IO.AIn.T_BF1;
ExtractAir.Flow := Parameters.IO.AIn.F_BF1;
SupplyAir.Power := Main.GreenMaster.AI2.T_CurrentPower;
ExtractAir.Power := Main.GreenMaster.AI2.F_CurrentPower;
SupplyAir.PressureRise := Parameters.IO.AIn.T_BF1;
ExtractAir.PressureRise := Parameters.IO.AIn.F_BF1;
CurrentMaxFlow := MAX(ExtractAir.Flow, SupplyAir.Flow);
IF CurrentMaxFlow <> 0 THEN
	SystemSpecificFanPower := (ExtractAir.Power + SupplyAir.Power) / CurrentMaxFlow;	
ELSE
	SystemSpecificFanPower := 0;
END_IF
IF (SupplyAir.PressureRise + ExtractAir.PressureRise) <> 0 THEN
	SystemEfficiency := (SupplyAir.SpecificFanPower + ExtractAir.SpecificFanPower) / ((SupplyAir.PressureRise + ExtractAir.PressureRise) / 1000);
ELSE
	SystemEfficiency := 0;	
END_IF

IF ApplyAbsoluteSetPointCurves <> LastApplyAbsoluteSetPointCurves THEN
	Temperature.SetPointAdjustment.Curve.Y1 := Temperature.Control.SP; 
	Temperature.SetPointAdjustment.Curve.Y2 := Temperature.Control.SP; 
	Temperature.SetPointAdjustment.Curve.Y3 := Temperature.Control.SP; 
	Temperature.SetPointAdjustment.Curve.Y4 := Temperature.Control.SP; 
	Temperature.SetPointAdjustment.Curve.Y5 := Temperature.Control.SP; 
	Temperature.SetPointAdjustment.Curve.Y6 := Temperature.Control.SP; 
	Temperature.SetPointAdjustment.Curve.Y7 := Temperature.Control.SP; 
	Temperature.SetPointAdjustment.Curve.Y8 := Temperature.Control.SP; 
	Temperature.SetPointAdjustment.Curve.Y9 := Temperature.Control.SP;
	Temperature.Control.SP := 0;
	SupplyAir.SetPointAdjustment.Curve.Y1 := SupplyAir.Control.SP;
	SupplyAir.SetPointAdjustment.Curve.Y2 := SupplyAir.Control.SP;
	SupplyAir.SetPointAdjustment.Curve.Y3 := SupplyAir.Control.SP;
	SupplyAir.SetPointAdjustment.Curve.Y4 := SupplyAir.Control.SP;
	SupplyAir.SetPointAdjustment.Curve.Y5 := SupplyAir.Control.SP;
	SupplyAir.SetPointAdjustment.Curve.Y6 := SupplyAir.Control.SP;
	SupplyAir.SetPointAdjustment.Curve.Y7 := SupplyAir.Control.SP;
	SupplyAir.SetPointAdjustment.Curve.Y8 := SupplyAir.Control.SP;
	SupplyAir.SetPointAdjustment.Curve.Y9 := SupplyAir.Control.SP;
	SupplyAir.Control.SP := 0;
	ExtractAir.SetPointAdjustment.Curve.Y1 := ExtractAir.Control.SP;
	ExtractAir.SetPointAdjustment.Curve.Y2 := ExtractAir.Control.SP;
	ExtractAir.SetPointAdjustment.Curve.Y3 := ExtractAir.Control.SP;
	ExtractAir.SetPointAdjustment.Curve.Y4 := ExtractAir.Control.SP;
	ExtractAir.SetPointAdjustment.Curve.Y5 := ExtractAir.Control.SP;
	ExtractAir.SetPointAdjustment.Curve.Y6 := ExtractAir.Control.SP;
	ExtractAir.SetPointAdjustment.Curve.Y7 := ExtractAir.Control.SP;
	ExtractAir.SetPointAdjustment.Curve.Y8 := ExtractAir.Control.SP;
	ExtractAir.SetPointAdjustment.Curve.Y9 := ExtractAir.Control.SP;
	ExtractAir.Control.SP := 0;
	LastApplyAbsoluteSetPointCurves := ApplyAbsoluteSetPointCurves;
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>